dispatcharr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcharr
spec:
  selector:
    matchLabels:
      app: dispatcharr
  template:
    metadata:
      labels:
        app: dispatcharr
    spec:
      containers:
      - name: dispatcharr
        image: ghcr.io/dispatcharr/dispatcharr:0.8.0-amd64
        volumeMounts:
          - name: dispatcharr-data
            mountPath: /data
        resources:
          limits:
            memory: "3Gi"
            cpu: "1"
          requests:
            memory: "256Mi"
            cpu: "500m"
      volumes:
        - name: dispatcharr-data
          persistentVolumeClaim:
            claimName: dispatcharr
