dispatcharr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatcharr-svc
spec:
  selector:
    app: dispatcharr
  ports:
  - port: 9191
    targetPort: 9191
